--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -1,28 +1,43 @@
-
-body{
-    background-color: rgb(117, 115, 115);
+body {
+    background-color: rgb(116, 116, 116);
 }
-/*
+
 main {
     border: 2px solid green;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 16px;
 }
-*/
+
 header {
-    
-    //flex-direction: column;
+
+    flex-direction: column;
+    justify-content: start;
     background-color: orange;
     width: 8.3vw;
     position: fixed;
     height: 100vh;
 }
 
-h1 {
-    max-width: 30px;
-    word-break: break-all;
-}
+
+    h1.text {
+    
+        margin-top: 48px;
+        max-width: 25px;
+        word-break: break-all;
+        text-align: center;
+    }
+        span.desktop-only {
+        display: block;
+        }
+
+    button.knapp {
+        display: block;
+        margin: 30px;
+        height: 60px; 
+        width: 60px;
+    }
+
 
 .page-content {
     margin-left: 8.3vw;
@@ -33,44 +48,144 @@ h1 {
         outline: 5px solid red;
     }
 }
-/*
-.page1 {
-    grid-column: span 11;
-    min-height: 100vh;
-    .top, .bottom {
+
+    .page-1,
+    .page-2 {
+        border-left: 16px solid #f9f135;
+        border-right: 16px solid #f9f135;
+    }
+   
+    .page-1, 
+    .page-2{
+        display: grid;
+        grid-template-columns: repeat(11, 1fr);
+        gap: 16px;
+    }
+    .page-1 {
+       
+        .tahini {
+            grid-column: 1 / span 4;
+           } 
+        
+        .blooper {
+            grid-column: 5 / span 7;
+        }
+    
+        .image {
+            grid-column: 1 / span 5;
+        }
+    
+        .blooper-2 {
+            grid-column: 6 / span 6;
+        }  
+    }
+
+    
+
+    
+    .page-2 {
+        .image-1{
+            grid-column: 1 / span 3;
+        }
+        .image-2{
+            grid-column: 4 / span 4;
+        }
+        .image-3{
+            grid-column: 8 / span 4;
+        }
+
+        .menu {
+            padding: 0;
+            list-style: none;
+            margin: 0;
+            grid-column: span 11;
+
+            li {
+            display: grid;
+            grid-template-columns: repeat(11, 1fr);
+            gap: 16px;
+
+            background-color: #fff;
+            color: #000;
+            border-top: 4px solid #000;
+            border-bottom: 4px solid #000;
+            margin-bottom: 8px;
+        }
+            .dish-name {
+                grid-column: span 4;
+            }
+
+            .dish-desc {
+                grid-column: span 6;
+            }
+
+            .dish-price {
+                grid-column: span 1;
+                text-align: right;
+            }
+        }
+    }
+
+    .page-3 {
+        background-color: #5fff37;
+        color: black;
+        border-left: 16px solid #fff;
+        border-right: 16px solid #fff;
+        display: grid;
+        grid-template-columns: repeat(11, 1fr);
+        gap: 16px;
+        align-items: center;
+        .book {
+            grid-column: span 5;
+            padding-left: 16px;
+        }
+        .contact {
+            grid-column: span 6;
+        }
+    }
+
+    
+   .cookies {
+    background-color: #ac77ff;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-inline: 8px;
+    padding-block: 16px;
+   }
+
+    .top,
+    .bottom {
         display: grid;
         gap: 16px;
         grid-template-columns: repeat(11, 1fr);
     }
 
     .top {
-        .page-title {
-            grid-column: span 4;
-            
-            .drizzle{
-                color: #ac77ff;
-            }
-            .tahini {
-                color: #5fff37;
-            }
-            .chickpeas {
-                color: #f9f135;
-            }
-        }
+        
         .text {
             grid-column: span 7;
         }
     }
-    
+
     .bottom {
-        .image{
+        .image {
             grid-column: span 5;
         }
+
         .text {
             grid-column: span 6;
         }
     }
-} 
-/*
-
-
+    
+    .page-2 {
+        .top,
+        .bottom {
+        display: grid;
+        gap: 16px;
+        grid-template-columns: repeat(11, 1fr);
+    }
+    } 
