--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -19,7 +19,6 @@ header {
     height: 100vh;
 }
 
-
     h1.text {
     
         margin-top: 48px;
@@ -31,15 +30,90 @@ header {
         display: block;
         }
 
-    button.knapp {
-        display: block;
-        margin: 30px;
-        height: 60px; 
-        width: 60px;
+    button {
+        
+        height: 35px; 
+        width: 35px;
+        background: transparent;
+        border: 0;
+        position: fixed;
+        right: 20px;
+        top: 20px;
+        z-index: 2;
+        pointer-events: none;
     }
 
+    button span {
 
-.page-content {
+        display: block;
+        width: 25px;
+        height: 3px;
+        background-color: black;
+        border-radius: 6px;
+        margin-bottom: 4px;
+    }
+
+    input {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 1;
+        width: 35px;
+        height: 35px;
+        opacity: 0;
+    }
+
+    input:checked + .menu-checkbox button span {
+
+        position: absolute;
+        transition: all 0.3s ease-in-out;
+    }
+
+    input:checked + .menu-checkbox button span:nth-child(2) {
+        
+        opacity: 0;
+    }
+ 
+    input:checked + .menu-checkbox button span:nth-child(1) {
+
+        transform: rotate(45deg);
+    }
+
+    input:checked + .menu-checkbox button span:nth-child(3){
+
+        transform: rotate(-45deg);
+    }
+
+    nav {
+        
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: rgba(241, 214, 107, 0.5);
+        width: 100vw;
+        height: 100vh;
+        opacity: 0;
+        transition: opacity 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        visibility: hidden;
+    }
+
+    input:checked + .menu-checkbox nav{
+        visibility: visible;
+        opacity: 1;
+    }
+
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: space-evenly;
+        text-align: center;
+    }
+
+    .page-content {
     margin-left: 8.3vw;
     min-width: 100vw;
 
