--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -230,7 +230,7 @@ header {
     padding-inline: 8px;
     padding-block: 16px;
    }
-
+   /*
     .top,
     .bottom {
         display: grid;
@@ -262,4 +262,4 @@ header {
         gap: 16px;
         grid-template-columns: repeat(11, 1fr);
     }
-    } 
+    } */
