--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -3,39 +3,155 @@
 }
 
 body {
-    background-color: black;
+    background-color: rgb(111, 154, 207);
 }
 
 header{
     display: flex;
-    justify-content: space-between;
-    background-color: black;
+    position: fixed;
+    align-items: center;
+    height: 60px;
+    width: 100vw;
+    opacity: 70%;
+    justify-content: center;
+    background-color: rgb(215, 179, 179);
     color: white;
+    outline:2px solid #5fff37;
     h1{
         margin: 0;
+
+    }
+
+
+button {
+        
+    height: 35px; 
+    width: 35px;
+    background: transparent;
+    border: 0;
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    z-index: 2;
+    pointer-events: none;
+}
+
+button span {
+
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    border-radius: 6px;
+    margin-bottom: 4px;
+}
+
+input {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 1;
+    width: 35px;
+    height: 35px;
+    opacity: 0;
+}
+
+input:checked + .menu-checkbox button span {
+
+    position: absolute;
+    transition: all 0.3s ease-in-out;
+}
+
+input:checked + .menu-checkbox button span:nth-child(2) {
+    
+    opacity: 0;
+}
+
+input:checked + .menu-checkbox button span:nth-child(1) {
+
+    transform: rotate(45deg);
+}
+
+input:checked + .menu-checkbox button span:nth-child(3){
+
+    transform: rotate(-45deg);
+}
+
+nav {
+    
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(241, 214, 107, 0.5);
+    width: 100vw;
+    height: 100vh;
+    opacity: 0;
+    transition: opacity 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    visibility: hidden;
+}
+
+input:checked + .menu-checkbox nav{
+    visibility: visible;
+    opacity: 1;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-evenly;
+    text-align: center;
+}
+}
+
+
+.page-content {
+    
+    .page {
+        min-height: 100vh;
+        outline: 5px solid red;
     }
 }
 
-$debugging: true;
+    .page-1,
+    .page-2 {
+        border-left: 16px solid #f9f135;
+        border-right: 16px solid #f9f135;
+        display: grid;
+        grid-template-columns: repeat(11, 1fr);
+        gap: 16px;
+    }
+   
+    .page-1 {
 
-.page-title {
+    $debugging: true;
+    .top,
+    .bottom {
+        height: 100vh;
+        
+    }
+    .page-title {
     @if $debugging {
-        outline: 1px solid red;
+        outline: 2px solid red;
     }
     font-family: "Jockey One", sans-serif;
     text-transform: uppercase;
-    position: relativ;
+    position: relative;
     min-width: 300px;
     min-height: 300px;
-    
-   div {
+   
+    div {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
    }
     
-   .drizzle, .chickpeas {
+   .drizzle, 
+   .chickpeas {
     position: absolute;
    }
    
@@ -55,5 +171,102 @@ $debugging: true;
         bottom: -8px;
         font-size: 1.75rem;
         z-index: -1;
+        }
     }
-}
+}        
+
+    .page-2 {
+        .image-1{
+            grid-column: 1 / span 3;
+        }
+        .image-2{
+            grid-column: 4 / span 4;
+        }
+        .image-3{
+            grid-column: 8 / span 4;
+        }
+
+        .menu {
+            padding: 0;
+            list-style: none;
+            margin: 0;
+            grid-column: span 11;
+
+            li {
+            display: grid;
+            grid-template-columns: repeat(11, 1fr);
+            gap: 16px;
+
+            background-color: #fff;
+            color: #000;
+            border-top: 4px solid #000;
+            border-bottom: 4px solid #000;
+            margin-bottom: 8px;
+        }
+            .dish-name {
+                grid-column: span 4;
+            }
+
+            .dish-desc {
+                grid-column: span 6;
+            }
+
+            .dish-price {
+                grid-column: span 1;
+                text-align: right;
+            }
+        }
+    }
+
+    .page-3 {
+        background-color: #5fff37;
+        color: black;
+        border-left: 16px solid #fff;
+        border-right: 16px solid #fff;
+        display: grid;
+        grid-template-columns: repeat(11, 1fr);
+        gap: 16px;
+        align-items: center;
+        .book {
+            grid-column: span 5;
+            padding-left: 16px;
+        }
+        .contact {
+            grid-column: span 6;
+        }
+    }
+
+/*
+.page-1
+.top,
+    .bottom {
+        display: grid;
+        gap: 16px;
+        grid-template-columns: repeat(11, 1fr);
+    }
+    
+    .top {
+        
+        .text {
+            grid-column: span 7;
+        }
+    }
+
+    .bottom {
+        .image {
+            grid-column: span 5;
+        }
+
+        .text {
+            grid-column: span 6;
+        }
+    }
+    
+    .page-2 {
+        .top,
+        .bottom {
+        display: grid;
+        gap: 16px;
+        grid-template-columns: repeat(11, 1fr);
+    }
+    } */
