--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -4,6 +4,7 @@
 
 body {
     background-color: black;
+    font-family: "Jockey One", sans-serif;
 }
 
 header{
@@ -166,7 +167,10 @@ ul {
         }
     
         .text  {
+
             max-width: 600px;
+            color: #5fff37;
+            font-size: 1.5em;
         }
 
         .image {
@@ -175,7 +179,7 @@ ul {
         
         .blooper,
         .blooper-2 {
-            margin-top: 16px;
+            margin-top: 5px;
         }
     }
     
