--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -13,10 +13,11 @@ header{
     align-items: center;
     height: 60px;
     width: 100vw;
-    opacity: 70%;
+   // opacity: 70%;
     justify-content: center;
     background-color: rgb(215, 179, 179);
     color: white;
+    z-index: 10;
     outline:2px solid #5fff37;
     h1{
         margin: 0;
@@ -131,7 +132,7 @@ ul {
     text-align: center;
     
         .logo {
-        
+        grid-column: 1 / span 2;
         border: 2px dashed red;
         position: relative; /* Behåller referenspunkten för absolut positionerade element */
         min-width: 200px;
@@ -163,22 +164,44 @@ ul {
         font-size: 1.57rem;
         bottom: 55px; /* Justera placeringen för att överlappa TAHINI */
         left: 10px;
-        //z-index: -1;
+        z-index: -1;
         }
     
         .text  {
-
+            grid-column: 1 / span 2;
             max-width: 600px;
             color: #5fff37;
             font-size: 1.5em;
         }
 
         .image {
+            grid-column: 1;
+            position: relative;
             margin-top: 16px;
-        }
+            background-image: url(/assets/photos/sallad.jpg);
+            background-size: cover;
+            background-position: center center;
+            width: 50%;
+            height: 300px;
+            border: 2px solid white;
+            
+                .arrow {
+                    position: absolute;
+                    transform: rotate(90deg);
+                    bottom: 8px;
+                    left: 8px;
+                }
+
+                .blooper-2 {
+                    grid-column: 2;
+                    width: 100%;
+                    margin-top: 5px;
+                }
+            }
         
-        .blooper,
-        .blooper-2 {
+       
+        .blooper {
+            grid-column: 1 / span 2;
             margin-top: 5px;
         }
     }
